Solved scrollbar problem (two different ways, one disabling scrolling and one giving popup screen a border of 0; not sure which one to use yet). User can add random or custom data (whitespace delimited) and order it according to 4 orderings: unchanged, random, reverse and in-order.

--- a/styles/animatorstyle.css
+++ b/styles/animatorstyle.css
@@ -60,3 +60,11 @@
 	width: 100%;
 }
 
+#menu-popup-popup {
+  top: 0 !important; 
+}
+
+/* Solves scrollbar problem, but allows scrollbar when popup hits bottom of page 
+.ui-popup-screen {
+  border: 0;
+}*/
